init(Axit): add pricing block

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>AXIT</title>
     <link rel="stylesheet" href="styles/awesome.css">
     <link rel="stylesheet" href="styles/tabs.css">
+    <link rel="stylesheet" href="styles/pricing.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     </style>
@@ -61,6 +62,48 @@
                     <h4 class="awesome-block-articles__title">Thoughtful Design</h4>
                     <h5 class="awesome-block-articles__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing 
                     elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</h5>
+                </article>
+            </section>
+        </div>
+    </div>
+    <div class="pricing">
+        <div class="pricing-block">
+            <h2 class="pricing-block__title">PRICING OPTIONS</h2>
+            <div class="pricing-block-separator"></div>
+            <h5 class="pricing-block__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
+            <section class="pricing-block-section">
+                <article class="pricing-block-articles">
+                    <h4 class="pricing-block-articles__plan">Basic</h4>
+                    <h3 class="pricing-block-articles__price">$10</h3>
+                    <h5 class="pricing-block-articles__free">Free for life</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                </article>
+                <article class="pricing-block-articles">
+                    <h4 class="pricing-block-articles__plan">Optima</h4>
+                    <h3 class="pricing-block-articles__price">$20</h3>
+                    <h5 class="pricing-block-articles__free">Free for life</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                </article>
+                <article class="pricing-block-articles">
+                    <h4 class="pricing-block-articles__plan">Pro</h4>
+                    <h3 class="pricing-block-articles__price">$30</h3>
+                    <h5 class="pricing-block-articles__free">Free for life</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
+                    <h5 class="pricing-block-articles__space">1 gb of space</h5>
                 </article>
             </section>
         </div>
