init(Axit): add customers block

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/awesome.css">
     <link rel="stylesheet" href="styles/tabs.css">
     <link rel="stylesheet" href="styles/pricing.css">
+    <link rel="stylesheet" href="styles/customers.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     </style>
@@ -105,6 +106,62 @@
                     <h5 class="pricing-block-articles__space">1 gb of space</h5>
                     <h5 class="pricing-block-articles__space">1 gb of space</h5>
                 </article>
+            </section>
+        </div>
+    </div>
+    <div class="customers">
+        <div class="customers-block">
+            <h2 class="customers-block__title">WHAT OUR CUSTOMERS ARE SAYING</h2>
+            <div class="customers-block-separator"></div>
+            <h5 class="customers-block__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
+            <section class="customers-block-top-section">
+                <article class="customers-block-messages">
+                    <h5 class="customers-block-messages__text">Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit. Doloribus 
+                        accusamus expedita repellat similique 
+                        odio aspernatur ex, architecto eaque 
+                        quo suscipit.</h5>
+                    <img class="customers-block-messages__images" src="images/triangle.svg" alt="triangle">
+                </article>
+                <article class="customers-block-messages">
+                    <h5 class="customers-block-messages__text">Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit. Doloribus 
+                        accusamus expedita repellat similique 
+                        odio aspernatur ex, architecto eaque 
+                        quo suscipit.</h5>
+                    <img class="customers-block-messages__images" src="images/triangle.svg" alt="triangle">
+                </article>
+                <article class="customers-block-messages">
+                    <h5 class="customers-block-messages__text">Lorem ipsum dolor sit amet, 
+                        consectetur adipisicing elit. Doloribus 
+                        accusamus expedita repellat similique 
+                        odio aspernatur ex, architecto eaque 
+                        quo suscipit.</h5>
+                    <img class="customers-block-messages__images" src="images/triangle.svg" alt="triangle">
+                </article>
+            </section>
+            <section class="customers-block-bottom-section">
+                <div class="customers-block-people">
+                    <img class="customers-block-people__photos" src="images/Davis.svg" alt="Davis">
+                    <div class="customers-block-people-info">
+                        <h4 class="customers-block-people__names">Davis Rhiel Madsen</h4>
+                        <h5 class="customers-block-people__job">Manager</h5>
+                    </div>
+                </div>
+                <div class="customers-block-people">
+                    <img class="customers-block-people__photos" src="images/Jaydon.svg" alt="Jaydon">
+                    <div class="customers-block-people-info">
+                        <h4 class="customers-block-people__names">Jaydon Rosser</h4>
+                        <h5 class="customers-block-people__job">Manager</h5>
+                    </div>
+                </div>
+                <div class="customers-block-people">
+                    <img class="customers-block-people__photos" src="images/Cooper.svg" alt="Cooper">
+                    <div class="customers-block-people-info">
+                        <h4 class="customers-block-people__names">Cooper Dorwart</h4>
+                        <h5 class="customers-block-people__job">Manager</h5>
+                    </div>
+                </div>
             </section>
         </div>
     </div>
