init(Axit): add header, social-media, design and footer blocks

--- a/index.html
+++ b/index.html
@@ -4,16 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AXIT</title>
+    <link rel="stylesheet" href="styles/social-media.css">
+    <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/awesome.css">
     <link rel="stylesheet" href="styles/tabs.css">
     <link rel="stylesheet" href="styles/pricing.css">
     <link rel="stylesheet" href="styles/customers.css">
+    <link rel="stylesheet" href="styles/design.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     </style>
 </head>
 <body>
 <main class="frame">
+    <div class="header">
+        <div class="header-block">
+            <img class="header-block__logo" src="images/logo.svg" alt="logo">
+            <div class="header-block-menu">
+                <div class="header-menu__navigation">Features</div>
+                <div class="header-menu__navigation">About</div>
+                <div class="header-menu__navigation">Pricing</div>
+                <div class="header-menu__navigation">Reviews</div>
+                <div class="header-menu__navigation">Contact</div>
+            </div>
+        </div>
+    </div>
+    <div class="social-media">
+        <div class="social-media-block">
+            <div class="social-media-right-side">
+                <h4 class="social-media-right-side__title">Social Media</h4>
+                <h5 class="social-media-right-side__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Aenean euismod bibendum laoreet.</h5>
+            </div>
+            <div class="social-media-left-side">
+                <img class="social-media-left-side__icons" src="images/facebook.svg" alt="facebook">
+                <img class="social-media-left-side__icons" src="images/twitter.svg" alt="twitter">
+                <img class="social-media-left-side__icons" src="images/linkedin.svg" alt="linkedin">
+                <img class="social-media-left-side__icons" src="images/pinterest.svg" alt="pinterest">
+                <img class="social-media-left-side__icons" src="images/instagram.svg" alt="instagram">
+                <img class="social-media-left-side__icons" src="images/github.svg" alt="github">
+                <img class="social-media-left-side__icons" src="images/rss.svg" alt="rss">
+            </div>
+        </div>
+    </div>
     <div class="tabs">
         <div class="tabs-block">
         <div class="tabs-block-top">
@@ -163,6 +197,28 @@
                     </div>
                 </div>
             </section>
+        </div>
+    </div>
+    <div class="design">
+        <div class="design-block">
+            <h2 class="design-block__title">STYLISH AXURE DESIGN</h2>
+            <div class="design-block-separator"></div>
+            <h5 class="design-block__subtitle">Use the sections you need, remove the ones you don't.  Create gorgeous prototypes faster than ever!</h5>
+            <button class="design-block__download">Download</button>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-block">
+            <div class="footer-social-media">
+                <img class="footer-social-media__icons" src="images/facebook_footer.svg" alt="facebook">
+                <img class="footer-social-media__icons" src="images/twitter_footer.svg" alt="twitter">
+                <img class="footer-social-media__icons" src="images/linkedin_footer.svg" alt="linkedin">
+                <img class="footer-social-media__icons" src="images/pinterest_footer.svg" alt="pinterest">
+                <img class="footer-social-media__icons" src="images/instagram_footer.svg" alt="instagram">
+                <img class="footer-social-media__icons" src="images/github_footer.svg" alt="github">
+                <img class="footer-social-media__icons" src="images/rss_footer.svg" alt="rss">
+            </div>
+            <h5 class="footer__text">© 2015 Axure Themes</h5>
         </div>
     </div>
 </main>
