init(Axit): add banner and contact-us blocks

--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AXIT</title>
-    <link rel="stylesheet" href="styles/social-media.css">
+    <link rel="stylesheet" href="styles/zeroing.css">
     <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/banner.css">
+    <link rel="stylesheet" href="styles/social-media.css">
     <link rel="stylesheet" href="styles/awesome.css">
     <link rel="stylesheet" href="styles/tabs.css">
     <link rel="stylesheet" href="styles/pricing.css">
     <link rel="stylesheet" href="styles/customers.css">
     <link rel="stylesheet" href="styles/design.css">
+    <link rel="stylesheet" href="styles/contact-us.css">
     <link rel="stylesheet" href="styles/footer.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     </style>
 </head>
 <body>
-<main class="frame">
-    <div class="header">
+    <header>
         <div class="header-block">
             <img class="header-block__logo" src="images/logo.svg" alt="logo">
             <div class="header-block-menu">
@@ -29,22 +31,49 @@
                 <div class="header-menu__navigation">Contact</div>
             </div>
         </div>
+    <header>
+<main class="frame">
+    <div class="banner">
+        <div class="banner-block">
+            <div class="banner-left-side">
+                <div class="banner-left-side-logo">
+                    <img class="banner-left-side-logo__AX" src="images/AX.svg" alt="AX">
+                    <img class="banner-left-side-logo__IT" src="images/IT.svg" alt="IT">
+                </div>
+                <h1 class="banner-left-side__title">MODERN AXURE TEMPLATE</br>FOR BEAUTIFUL</br>PROTOTYPES</h1>
+                <div class="banner-left-side-separator"></div>
+                <h5 class="banner-left-side__subtitle">Lorem ipsum dolor sit amet,</br>consectetur adipiscing elit</h5>
+                <button type="submit" class="banner-left-side__download">Download</button>
+            </div>
+            <div class="banner-right-side">
+                <form class="banner-form">
+                    <h4 class="banner-form__title">TRY YOUR <span class="banner-form__title-free">FREE</span> TRIAL TODAY</h4>
+                    <input type="text" class="banner-form__boxes" name="name" placeholder="Name">
+                    <div class="banner-form-line"></div>
+                    <input type="email" class="banner-form__boxes" name="email" placeholder="Email">
+                    <div class="banner-form-line"></div>
+                    <input type="password" class="banner-form__boxes" name="password" placeholder="Password">
+                    <div class="banner-form-line"></div>
+                    <button class="banner-form__start">Get Started</button>
+                </form>
+            </div>
+        </div>
     </div>
     <div class="social-media">
         <div class="social-media-block">
-            <div class="social-media-right-side">
-                <h4 class="social-media-right-side__title">Social Media</h4>
-                <h5 class="social-media-right-side__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+            <div class="social-media-left-side">
+                <h4 class="social-media-left-side__title">Social Media</h4>
+                <h5 class="social-media-left-side__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     Aenean euismod bibendum laoreet.</h5>
             </div>
-            <div class="social-media-left-side">
-                <img class="social-media-left-side__icons" src="images/facebook.svg" alt="facebook">
-                <img class="social-media-left-side__icons" src="images/twitter.svg" alt="twitter">
-                <img class="social-media-left-side__icons" src="images/linkedin.svg" alt="linkedin">
-                <img class="social-media-left-side__icons" src="images/pinterest.svg" alt="pinterest">
-                <img class="social-media-left-side__icons" src="images/instagram.svg" alt="instagram">
-                <img class="social-media-left-side__icons" src="images/github.svg" alt="github">
-                <img class="social-media-left-side__icons" src="images/rss.svg" alt="rss">
+            <div class="social-media-right-side">
+                <img class="social-media-right-side__icons" src="images/facebook.svg" alt="facebook">
+                <img class="social-media-right-side__icons" src="images/twitter.svg" alt="twitter">
+                <img class="social-media-right-side__icons" src="images/linkedin.svg" alt="linkedin">
+                <img class="social-media-right-side__icons" src="images/pinterest.svg" alt="pinterest">
+                <img class="social-media-right-side__icons" src="images/instagram.svg" alt="instagram">
+                <img class="social-media-right-side__icons" src="images/github.svg" alt="github">
+                <img class="social-media-right-side__icons" src="images/rss.svg" alt="rss">
             </div>
         </div>
     </div>
@@ -148,52 +177,56 @@
             <h2 class="customers-block__title">WHAT OUR CUSTOMERS ARE SAYING</h2>
             <div class="customers-block-separator"></div>
             <h5 class="customers-block__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
-            <section class="customers-block-top-section">
-                <article class="customers-block-messages">
-                    <h5 class="customers-block-messages__text">Lorem ipsum dolor sit amet, 
-                        consectetur adipisicing elit. Doloribus 
-                        accusamus expedita repellat similique 
-                        odio aspernatur ex, architecto eaque 
-                        quo suscipit.</h5>
-                    <img class="customers-block-messages__images" src="images/triangle.svg" alt="triangle">
-                </article>
-                <article class="customers-block-messages">
-                    <h5 class="customers-block-messages__text">Lorem ipsum dolor sit amet, 
-                        consectetur adipisicing elit. Doloribus 
-                        accusamus expedita repellat similique 
-                        odio aspernatur ex, architecto eaque 
-                        quo suscipit.</h5>
-                    <img class="customers-block-messages__images" src="images/triangle.svg" alt="triangle">
-                </article>
-                <article class="customers-block-messages">
-                    <h5 class="customers-block-messages__text">Lorem ipsum dolor sit amet, 
-                        consectetur adipisicing elit. Doloribus 
-                        accusamus expedita repellat similique 
-                        odio aspernatur ex, architecto eaque 
-                        quo suscipit.</h5>
-                    <img class="customers-block-messages__images" src="images/triangle.svg" alt="triangle">
-                </article>
-            </section>
-            <section class="customers-block-bottom-section">
-                <div class="customers-block-people">
-                    <img class="customers-block-people__photos" src="images/Davis.svg" alt="Davis">
-                    <div class="customers-block-people-info">
-                        <h4 class="customers-block-people__names">Davis Rhiel Madsen</h4>
-                        <h5 class="customers-block-people__job">Manager</h5>
+            <section class="customers-block-section">
+                <div class="customers-block-tweets">
+                    <article class="customers-block-tweets-messages">
+                        <h5 class="customers-block-tweets-messages__text">Lorem ipsum dolor sit amet, 
+                            consectetur adipisicing elit. Doloribus 
+                            accusamus expedita repellat similique 
+                            odio aspernatur ex, architecto eaque 
+                            quo suscipit.</h5>
+                        <img class="customers-block-tweets-messages__images" src="images/triangle.svg" alt="triangle">
+                    </article>
+                    <div class="customers-block-tweets-people">
+                        <img class="customers-block-tweets-people__photos" src="images/Davis.svg" alt="Davis">
+                        <div class="customers-block-tweets-people-info">
+                            <h4 class="customers-block-tweets-people__names">Davis Rhiel Madsen</h4>
+                            <h5 class="customers-block-tweets-people__job">Manager</h5>
+                        </div>
                     </div>
                 </div>
-                <div class="customers-block-people">
-                    <img class="customers-block-people__photos" src="images/Jaydon.svg" alt="Jaydon">
-                    <div class="customers-block-people-info">
-                        <h4 class="customers-block-people__names">Jaydon Rosser</h4>
-                        <h5 class="customers-block-people__job">Manager</h5>
+                <div class="customers-block-tweets">
+                    <article class="customers-block-tweets-messages">
+                        <h5 class="customers-block-tweets-messages__text">Lorem ipsum dolor sit amet, 
+                            consectetur adipisicing elit. Doloribus 
+                            accusamus expedita repellat similique 
+                            odio aspernatur ex, architecto eaque 
+                            quo suscipit.</h5>
+                        <img class="customers-block-tweets-messages__images" src="images/triangle.svg" alt="triangle">
+                    </article>
+                    <div class="customers-block-tweets-people">
+                        <img class="customers-block-tweets-people__photos" src="images/Jaydon.svg" alt="Jaydon">
+                        <div class="customers-block-tweets-people-info">
+                            <h4 class="customers-block-tweets-people__names">Jaydon Rosser</h4>
+                            <h5 class="customers-block-tweets-people__job">Manager</h5>
+                        </div>
                     </div>
                 </div>
-                <div class="customers-block-people">
-                    <img class="customers-block-people__photos" src="images/Cooper.svg" alt="Cooper">
-                    <div class="customers-block-people-info">
-                        <h4 class="customers-block-people__names">Cooper Dorwart</h4>
-                        <h5 class="customers-block-people__job">Manager</h5>
+                <div class="customers-block-tweets">
+                    <article class="customers-block-tweets-messages">
+                        <h5 class="customers-block-tweets-messages__text">Lorem ipsum dolor sit amet, 
+                            consectetur adipisicing elit. Doloribus 
+                            accusamus expedita repellat similique 
+                            odio aspernatur ex, architecto eaque 
+                            quo suscipit.</h5>
+                        <img class="customers-block-tweets-messages__images" src="images/triangle.svg" alt="triangle">
+                    </article>
+                    <div class="customers-block-tweets-people">
+                        <img class="customers-block-tweets-people__photos" src="images/Cooper.svg" alt="Cooper">
+                        <div class="customers-block-tweets-people-info">
+                            <h4 class="customers-block-tweets-people__names">Cooper Dorwart</h4>
+                            <h5 class="customers-block-tweets-people__job">Manager</h5>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -207,20 +240,44 @@
             <button class="design-block__download">Download</button>
         </div>
     </div>
-    <div class="footer">
-        <div class="footer-block">
-            <div class="footer-social-media">
-                <img class="footer-social-media__icons" src="images/facebook_footer.svg" alt="facebook">
-                <img class="footer-social-media__icons" src="images/twitter_footer.svg" alt="twitter">
-                <img class="footer-social-media__icons" src="images/linkedin_footer.svg" alt="linkedin">
-                <img class="footer-social-media__icons" src="images/pinterest_footer.svg" alt="pinterest">
-                <img class="footer-social-media__icons" src="images/instagram_footer.svg" alt="instagram">
-                <img class="footer-social-media__icons" src="images/github_footer.svg" alt="github">
-                <img class="footer-social-media__icons" src="images/rss_footer.svg" alt="rss">
+    <div class="contact-us">
+        <div class="contact-us-block">
+            <h2 class="contact-us-block__title">CONTACT US</h2>
+            <div class="contact-us-block-separator"></div>
+            <h5 class="contact-us-block__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
+            <form class="contact-us-block-form">
+                <div class="contact-us-block-form-left-side">
+                    <input type="text" class="contact-us-form__boxes" name="name" placeholder="Name">
+                    <div class="contact-us-form-line"></div>
+                    <input type="email" class="contact-us-form__boxes" name="email" placeholder="Email">
+                    <div class="contact-us-form-line"></div>
+                    <input type="password" class="contact-us-form__boxes" name="password" placeholder="Password">
+                    <div class="contact-us-form-line"></div>
+                </div>
+                <div class="contact-us-block-form-right-side">
+                    <textarea rows="11" class="contact-us-form__boxes-message" name="message" placeholder="Message"></textarea>
+                    <div class="contact-us-form-line"></div>
+                </div>
+            </form>
+            <div class="contact-us-button">
+                <button type="submit" class="contact-us-button__message">Send Message</button>
             </div>
-            <h5 class="footer__text">© 2015 Axure Themes</h5>
         </div>
     </div>
 </main>
+<footer>
+    <div class="footer-block">
+        <div class="footer-social-media">
+            <img class="footer-social-media__icons" src="images/facebook_footer.svg" alt="facebook">
+            <img class="footer-social-media__icons" src="images/twitter_footer.svg" alt="twitter">
+            <img class="footer-social-media__icons" src="images/linkedin_footer.svg" alt="linkedin">
+            <img class="footer-social-media__icons" src="images/pinterest_footer.svg" alt="pinterest">
+            <img class="footer-social-media__icons" src="images/instagram_footer.svg" alt="instagram">
+            <img class="footer-social-media__icons" src="images/github_footer.svg" alt="github">
+            <img class="footer-social-media__icons" src="images/rss_footer.svg" alt="rss">
+        </div>
+        <h5 class="footer__text">© 2015 Axure Themes</h5>
+    </div>
+</footer>
 </body>
 </html>
