init(Axit): make adaptive layout

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="header-block">
             <img class="header-block__logo" src="images/logo.svg" alt="logo">
             <div class="header-block-menu">
+                <img class="header-menu__burger" src="images/burger.svg" alt="burger">
                 <div class="header-menu__navigation">Features</div>
                 <div class="header-menu__navigation">About</div>
                 <div class="header-menu__navigation">Pricing</div>
@@ -37,13 +38,14 @@
         <div class="banner-block">
             <div class="banner-left-side">
                 <div class="banner-left-side-logo">
+                    <img class="banner-left-side-logo__little" src="images/little-logo.svg" alt="little-logo">
                     <img class="banner-left-side-logo__AX" src="images/AX.svg" alt="AX">
                     <img class="banner-left-side-logo__IT" src="images/IT.svg" alt="IT">
                 </div>
                 <h1 class="banner-left-side__title">MODERN AXURE TEMPLATE</br>FOR BEAUTIFUL</br>PROTOTYPES</h1>
                 <div class="banner-left-side-separator"></div>
                 <h5 class="banner-left-side__subtitle">Lorem ipsum dolor sit amet,</br>consectetur adipiscing elit</h5>
-                <button type="submit" class="banner-left-side__download">Download</button>
+                <button type="button" class="banner-left-side__download">Download</button>
             </div>
             <div class="banner-right-side">
                 <form class="banner-form">
@@ -54,7 +56,7 @@
                     <div class="banner-form-line"></div>
                     <input type="password" class="banner-form__boxes" name="password" placeholder="Password">
                     <div class="banner-form-line"></div>
-                    <button class="banner-form__start">Get Started</button>
+                    <button type="submit" class="banner-form__start">Get Started</button>
                 </form>
             </div>
         </div>
@@ -80,10 +82,10 @@
     <div class="tabs">
         <div class="tabs-block">
         <div class="tabs-block-top">
-            <button class="tabs-block-top__buttons">TAB 1</button>
-            <button class="tabs-block-top__buttons">TAB 2</button> 
-            <button class="tabs-block-top__buttons">TAB 3</button> 
-            <button class="tabs-block-top__empty-button"></button> 
+            <button type="button" class="tabs-block-top__buttons">TAB 1</button>
+            <button type="button" class="tabs-block-top__buttons">TAB 2</button> 
+            <button type="button" class="tabs-block-top__buttons">TAB 3</button> 
+            <button type="button" class="tabs-block-top__empty-button"></button> 
         </div>
         <div class="tabs-block-main">
             <div class="tabs-block-left-side">
@@ -95,7 +97,7 @@
                     <br>
                     <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
                     bibendum laoreet.</h5>
-                <button class="tabs-block-left-side__download">Download</button>
+                <button type="button" class="tabs-block-left-side__download">Download</button>
             </div>
             <div class="tabs-block-right-side">
                 <img class="tabs-block-right-side__image" src="images/the-statue-of-liberty.svg" alt="the-statue-of-liberty">
@@ -230,8 +232,9 @@
                     </div>
                 </div>
             </section>
+            <img class="customers-block-dots" src="images/dots.svg" alt="dots">
         </div>
-    </div>
+    </div> 
     <div class="design">
         <div class="design-block">
             <h2 class="design-block__title">STYLISH AXURE DESIGN</h2>
@@ -246,38 +249,40 @@
             <div class="contact-us-block-separator"></div>
             <h5 class="contact-us-block__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
             <form class="contact-us-block-form">
-                <div class="contact-us-block-form-left-side">
-                    <input type="text" class="contact-us-form__boxes" name="name" placeholder="Name">
-                    <div class="contact-us-form-line"></div>
-                    <input type="email" class="contact-us-form__boxes" name="email" placeholder="Email">
-                    <div class="contact-us-form-line"></div>
-                    <input type="password" class="contact-us-form__boxes" name="password" placeholder="Password">
-                    <div class="contact-us-form-line"></div>
+                <div class="contact-us-block-form-fields">
+                    <div class="contact-us-block-form-left-side">
+                        <input type="text" class="contact-us-form__boxes" name="name" placeholder="Name">
+                        <div class="contact-us-form-line"></div>
+                        <input type="email" class="contact-us-form__boxes" name="email" placeholder="Email">
+                        <div class="contact-us-form-line"></div>
+                        <input type="password" class="contact-us-form__boxes" name="password" placeholder="Password">
+                        <div class="contact-us-form-line"></div>
+                    </div>
+                    <div class="contact-us-block-form-right-side">
+                        <textarea rows="11" class="contact-us-form__boxes-message" name="message" placeholder="Message"></textarea>
+                        <div class="contact-us-form-line"></div>
+                    </div>
                 </div>
-                <div class="contact-us-block-form-right-side">
-                    <textarea rows="11" class="contact-us-form__boxes-message" name="message" placeholder="Message"></textarea>
-                    <div class="contact-us-form-line"></div>
+                <div class="contact-us-form-button">
+                    <button type="submit" class="contact-us-form-button__message">Send Message</button>
                 </div>
             </form>
-            <div class="contact-us-button">
-                <button type="submit" class="contact-us-button__message">Send Message</button>
-            </div>
         </div>
     </div>
 </main>
-<footer>
-    <div class="footer-block">
-        <div class="footer-social-media">
-            <img class="footer-social-media__icons" src="images/facebook_footer.svg" alt="facebook">
-            <img class="footer-social-media__icons" src="images/twitter_footer.svg" alt="twitter">
-            <img class="footer-social-media__icons" src="images/linkedin_footer.svg" alt="linkedin">
-            <img class="footer-social-media__icons" src="images/pinterest_footer.svg" alt="pinterest">
-            <img class="footer-social-media__icons" src="images/instagram_footer.svg" alt="instagram">
-            <img class="footer-social-media__icons" src="images/github_footer.svg" alt="github">
-            <img class="footer-social-media__icons" src="images/rss_footer.svg" alt="rss">
+    <footer>
+        <div class="footer-block">
+            <div class="footer-social-media">
+                <img class="footer-social-media__icons" src="images/facebook_footer.svg" alt="facebook">
+                <img class="footer-social-media__icons" src="images/twitter_footer.svg" alt="twitter">
+                <img class="footer-social-media__icons" src="images/linkedin_footer.svg" alt="linkedin">
+                <img class="footer-social-media__icons" src="images/pinterest_footer.svg" alt="pinterest">
+                <img class="footer-social-media__icons" src="images/instagram_footer.svg" alt="instagram">
+                <img class="footer-social-media__icons" src="images/github_footer.svg" alt="github">
+                <img class="footer-social-media__icons" src="images/rss_footer.svg" alt="rss">
+            </div>
+            <h5 class="footer__text">© 2015 Axure Themes</h5>
         </div>
-        <h5 class="footer__text">© 2015 Axure Themes</h5>
-    </div>
-</footer>
+    </footer> 
 </body>
 </html>
